5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1636_2731.log
== TEST (2019-04-14 11:51:52) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input((x-a)**2 + (y-b)**2 = r**2)


-- ERROR:
File "XXXX", line 5
    e = input((x-a)**2 + (y-b)**2 = r**2)
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:09) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input(((x-a)**2 + (y-b)**2 = r**2))


-- ERROR:
File "XXXX", line 5
    e = input(((x-a)**2 + (y-b)**2 = r**2))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:03:11) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input((x-a)**2 + (y-b)**2 = r**2)


-- ERROR:
File "XXXX", line 5
    e = input((x-a)**2 + (y-b)**2 = r**2)
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:03:43) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input(float((x-a)**2 + (y-b)**2 = r**2))

-- ERROR:
File "XXXX", line 5
    e = input(float((x-a)**2 + (y-b)**2 = r**2))
                   ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:04:24) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input(((x-a)**(2) + (y-b)**(2) = (r)**2))

-- EXECUTION TIME:
0.175265
-- ERROR:
  File "/home/codebench/codes/1636/2731/main.py", line 5
    e = input(((x-a)**(2) + (y-b)**(2) = (r)**2))
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:04:26) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))

e = input(((x-a)**(2) + (y-b)**(2) = (r)**2))

-- ERROR:
File "XXXX", line 5
    e = input(((x-a)**(2) + (y-b)**(2) = (r)**2))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:38:44) 
-- CODE:
a = float(input(" digite coefiente a "))
b = float(input(" digite coeficiente b "))
r = float (input(" digite raio "))
if(b>0):
	mensagem=" Superiores "
else:
	mensagem= " Inferiores "
	print(mensagem)


-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:39:05) 
-- CODE:
a = float(input(" digite coefiente a: "))
b = float(input(" digite coeficiente b: "))
r = float (input(" digite raio: "))
if(b>0):
	mensagem=" Superiores "
else:
	mensagem= " Inferiores "
	print(mensagem)


-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:39:20) 
-- CODE:
a = float(input(" digite coefiente a: "))
b = float(input(" digite coeficiente b: "))
r = float (input(" digite raio: "))
if(b>0):
	mensagem=" Superiores "
else:
	mensagem= " Inferiores "
	print(mensagem)


-- EXECUTION TIME:
0.132661
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:39:57) 
-- CODE:
a = float(input(" digite coefiente a: "))
b = float(input(" digite coeficiente b: "))
r = float (input(" digite raio: "))
if(b>0):
	mensagem=" Superiores "
else:
	mensagem= " Inferiores "
	print(mensagem)


-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:40:31) 
-- CODE:
a = float(input(" digite coefiente a: "))
b = float(input(" digite coeficiente b: "))
r = float (input(" digite raio: "))
if(b>0):
	mensagem=" Superiores "
	print(mensagem)
else:
	mensagem= " Inferiores "
	print(mensagem)


-- EXECUTION TIME:
0.132153
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
